build: angular proxy

--- a/apps/shell/project.json
+++ b/apps/shell/project.json
@@ -105,7 +105,8 @@
           "buildTarget": "shell:esbuild:production"
         },
         "development": {
-          "buildTarget": "shell:esbuild:development"
+          "buildTarget": "shell:esbuild:development",
+          "proxyConfig": "apps/shell/proxy.config.json"
         }
       },
       "defaultConfiguration": "development",
